<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="161dp"
        android:layout_height="132dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/logo_ump_official_1528x1536" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#C7E2F6"
        android:text="@string/textView"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="12pt" />

    <EditText
        android:id="@+id/ednama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:textSize="9pt"
        android:hint="@string/ednama"
        android:text="" />

    <EditText
        android:id="@+id/edtugas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:textSize="9pt"
        android:hint="@string/edtugas"
        android:text="" />

    <EditText
        android:id="@+id/edhadir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:textSize="9pt"
        android:hint="@string/edhadir"
        android:text="" />

    <EditText
        android:id="@+id/eduts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:textSize="9pt"
        android:hint="@string/eduts"
        android:text="" />

    <EditText
        android:id="@+id/eduas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:textSize="9pt"
        android:hint="@string/eduas"
        android:text="" />

    <Button
        android:id="@+id/btnhitung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#77A1C3"
        android:text="@string/btnhitung" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView2"
        android:textSize="9pt"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/edakhir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:textSize="9pt"
        android:text="" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView3"
        android:textSize="9pt"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/edhuruf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:textSize="9pt"
        android:text="" />

</LinearLayout>